@@ -15,6 +15,8 @@ var localized_strings,
 			official_group_url: "steamcommunity.com/groups/enhancedsteam",
 			store: "Store",
 			price: "Price",
+			price_options: "Price options",
+			cancel: "Cancel",
 			library_menu: "Library",
 			community: "Community",
 			news: "News",
